--- a/index.html
+++ b/index.html
@@ -87,14 +87,18 @@
 				    <div class="project-title-container">
 				        <h3 class="project-title">Project</h3>
 				    </div>
-				    <div class="project">
-				        <h3>프로젝트 1</h3>
-				        <p>프로젝트 1에 대한 설명이 들어갑니다.</p>
+
+					<div class="project">
+				        <h3>shopnova Project</h3>
+						<P>IDE : Spring Boot, h2 DB</P>
+						<p>Title : 쇼핑몰 사이트</p>
+				        <p>배포 준비중 입니다.</p>
 				    </div>
-				    
 				    <div class="project">
-				        <h3>프로젝트 2</h3>
-				        <p>프로젝트 2에 대한 설명이 들어갑니다.</p>
+				        <h3>Camping Project</h3>
+				        <p>IDE : Spring Boot, Oracle DB, DBeaver</p>
+						<p>Title : 캠핑장 예약 사이트</p>
+						<p>배포 준비중 입니다.</p>
 				    </div>
 				</div>
 				
