html, css 업데이트 2.0

--- a/index.html
+++ b/index.html
@@ -99,18 +99,19 @@
             <div class="project-title-container">
               <h3 class="project-title">Project</h3>
             </div>
-
-            <div class="project">
-              <h3>shopnova Project</h3>
-              <p>IDE : Spring Boot, h2 DB</p>
-              <p>Title : 쇼핑몰 사이트</p>
-              <p>배포 준비중 입니다.</p>
-            </div>
+            <a href="http://15.164.198.57:8081/">
+              <div class="project">
+                <h3>shopnova Project</h3>
+                <img src="img/shopnova.jpg">
+                <p>Title : 쇼핑몰 사이트</p>
+                <p>Description : Spring Boot, h2를 활용한 쇼핑물 사이트</p>
+              </div>
+            </a>
             <div class="project">
               <h3>Camping Project</h3>
               <p>IDE : Spring Boot, Oracle DB, DBeaver</p>
               <p>Title : 캠핑장 예약 사이트</p>
-              <p>배포 준비중 입니다.</p>
+              <p>Description : </p>
             </div>
           </div>
 
