--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             </a>
             <div class="project">
               <h3>Camping Project</h3>
-              <p>IDE : Spring Boot, Oracle DB, DBeaver</p>
               <p>Title : 캠핑장 예약 사이트</p>
-              <p>Description : </p>
+              <p>Description : Spring Boot, Oracle DB를 활용한 캠핑장 예약 사이트</p>
+              <p>Oracle DB와 Docker 문제로 해결중 입니다. 추후에 문제가 해결되면 링크를 올리겠습니다.</p>
             </div>
           </div>
 
