--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                 <p>Description : Spring Boot, h2를 활용한 쇼핑물 사이트</p>
               </div>
             </a>
-            <div class="project">
-              <h3>Camping Project</h3>
-              <p>Title : 캠핑장 예약 사이트</p>
-              <p>Description : Spring Boot, Oracle DB를 활용한 캠핑장 예약 사이트</p>
-              <p>Oracle DB와 Docker 문제로 해결중 입니다.</p>
-              <p>추후에 문제가 해결되면 링크를 올리겠습니다.</p>
-            </div>
+            <a href="http://13.124.134.115:8082/">
+              <div class="project">
+                <h3>Camping Project</h3>
+                <p>Title : 캠핑장 예약 사이트</p>
+                <p>Description : Spring Boot, Oracle DB를 활용한 캠핑장 예약 사이트</p>
+              </div>
+            </a>
           </div>
 
           <footer class="personal-information">
