--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <a href="http://13.124.134.115:8082/">
               <div class="project">
                 <h3>Camping Project</h3>
+                <img src="img/CampingReservation.jpg">
                 <p>Title : 캠핑장 예약 사이트</p>
                 <p>Description : Spring Boot, Oracle DB를 활용한 캠핑장 예약 사이트</p>
               </div>
