--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                   <p class="skill-item">Spring Boot</p>
                   <p class="skill-item">Spring MVC</p>
                   <p class="skill-item">Spring Data JPA</p>
+                  <p class="skill-item">Mybatis</p>
                   <p class="skill-item">JSP</p>
                   <p class="skill-item">Thymeleaf</p>
                   <p class="skill-item">Framework</p>
@@ -112,9 +113,9 @@
             <a href="javascript:void(0);" onclick="openModal('shopnova')">
               <div class="project">
                 <h3>Shopnova Project</h3>
-                <img src="img/shopnova.jpg">
+                <img src="img/shopnova.jpg" style="height: 220px;">
                 <p>Title : 쇼핑몰 사이트</p>
-                <p>Description : Spring Boot, h2를 활용한 쇼핑물 사이트</p>
+                <p>Description : Spring Boot, h2를 활용하여 쇼핑물 사이트를 개발했습니다.</p>
               </div>
             </a>
 
@@ -132,18 +133,19 @@
                 <div class="modal-description">
                   <p><b>Title : </b> 쇼핑몰 사이트</p>
                   <p><b>관리자 로그인 : </b>ID : admin@example.com / Password : password123</p>
-                  <p><b>기술 스택 : </b> Spring Boot, H2 DataBase, JavaScript, Java, jpa, External API(Naver Login, KGinicis)</p>
+                  <p><b>기술 스택 : </b> Spring Boot, H2 DataBase, JavaScript, Java, jpa, API(Naver Login, KGinicis)</p>
                   <p><b>개발 기간 : </b>2025년 01월 19일 ~ 2025년 02월 16일</p>
                   <p><b>담당 역할 :</b></p>
                   <ul class="role-list">
                     <li>DataBase 엔티티 설계</li>
-                    <li>페이지 흐름도 설계</li>
+                    <li>프로그램 흐름 설계</li>
                     <li>결제 페이지 구현</li>
-                    <li>전체적인 오류 코드 해결 및 불필요한 코드 정리</li>
+                    <li>전체적인 팀원 오류 코드 해결 및 불필요한 코드 정리</li>
                   </ul>
                   <p><b>설명 : </b>관리자가 쇼핑몰 사이트를 직접 운영할 수 있도록 쇼핑몰을 개발했습니다, 사용자와 상품들을 관리자가 컨트롤할 수 있게 구현하였고, 결제까지 하면 매출 내역을 확인할 수 있도록 하였습니다.</p>
                   <p><b>개선점과 느낀점 : </b>개발기간이 부족하여 많이 아쉬웠지만, 이전 프로젝트를 진행했을 때 보다 더 많은 기능구현을 하였고 api도 추가하여 구현하였습니다. 실제로 결제 api적용하여 구현하기에는 한계가 있었지만,
-                                            다음 프로젝트가 있다면 더 완벽하게 가독성 있고 깔끔한 프로젝트로 완성하고 싶습니다.</p>
+                                            다음 프로젝트가 있다면 더 완벽하게 가독성 있고 깔끔한 프로젝트로 완성하고 싶고, 또한 실무에서 어떻게 일을 하는지 검색하여 다음 프로젝트에는 실무에서 하는 일 처럼 코드를 구현하여,
+                                            로그인 및 여러가지 기능들을 처리할 수 있게 구현하고 싶습니다.</p>
                   <a href="http://15.164.198.57:8081/" target="_blank">프로젝트 링크 바로가기>></a>
                 </div>
               </div>
@@ -152,9 +154,9 @@
             <a href="javascript:void(0);" onclick="openModal('camping')">
               <div class="project">
                 <h3>Camping Project</h3>
-                <img src="img/CampingReservation.jpg">
+                <img src="img/CampingReservation.jpg" style="height: 220px;">
                 <p>Title : 캠핑장 예약 사이트</p>
-                <p>Description : Spring Boot, Oracle DB를 활용한 캠핑장 예약 사이트</p>
+                <p>Description : Spring Boot, Oracle DB를 활용하여 캠핑장 예약이 가능한 사이트를 개발했습니다.</p>
               </div>
             </a>
 
@@ -180,8 +182,10 @@
                     <li>일부 CSS 디자인</li>
                   </ul>
                   <p><b>설명 : </b>사용자가 캠핑장을 예약할 수 있도록 만든 시스템입니다. 또한 게시글을 추가하여 사용자들이 게시글을 올릴 수 있도록 하였습니다.</p>
-                  <p><b>개선점과 느낀점 : </b>첫 프로젝트를 진행하면서 부족한 부분이 많았지만, 이번 프로젝트 계기로 많이 배우고 학습했습니다. 많은 기능을 구현하지 못해 아쉬웠지만
-                                            다음 프로젝트를 하게 된다면 더 많은 기능구현 및 외부 api등 여러가지를 추가하여 더욱 더 발전하고 싶습니다.</p>
+                  <p><b>개선점과 느낀점 : </b>첫 프로젝트를 진행하면서 부족한 부분이 많았지만, 이번 프로젝트 계기로 많이 배우며 스스로 많은 성장을 할 수 있었습니다.
+                                            아쉬운 점은 많은 기능을 구현하지 못하였고, 어떻게 동작이 되는지 흐름을 많이 알지 못해 구현하는데 어려움을 느꼈지만,
+                                            다음 프로젝트를 하게 된다면 더 많은 기능구현 및 외부 api등 여러가지를 추가하여 스스로 더욱 더 성장하고 발전하고,
+                                            더 좋은 프로젝트를 만들고 싶습니다.</p>
                   <a href="http://13.124.134.115:8082/" target="_blank">프로젝트 링크 바로가기 >></a>
                 </div> 
               </div>
@@ -190,36 +194,36 @@
             <a href="javascript:void(0);" onclick="openModal('pickme')">
               <div class="project">
                 <h3>Pickme project</h3>
-                <img src="">
+                <img src="img/pickme.jpg" style="height: 230px;">
                 <p>Title : 중고거래 사이트</p>
                 <p>Description : </p>
               </div>
             </a>
   
-            <div id="modal-camping" class="modal">
+            <div id="modal-pickme" class="modal">
               <div class="modal-content">
                 <span class="close" onclick="closeModal('pickme')">&times;</span>
                 <h2>Camping Reservation Project</h2>
             
                 <div class="slider">
-                  <button class="prev" onclick="prevImagepickme()">&#10094;</button>
-                  <img id="slider-image-camping" src="">
-                  <button class="next" onclick="nextImagepickme()">&#10095;</button>
+                  <button class="prev" onclick="prevImagePickMe()">&#10094;</button>
+                  <img id="slider-image-pickme" src="img/pickme.jpg">
+                  <button class="next" onclick="nextImagePickMe()">&#10095;</button>
                 </div>
             
                 <div class="modal-description">
                   <p><b>Title : </b> 중고거래 사이트</p>
-                  <p><b>기술 스택 : </b> Spring Boot, Oracle DB(DBeaver), JavaScript, Java</p>
-                  <p><b>개발 기간 : </b>2024년 07월 25일 ~ 2024년 08월 21일</p>
+                  <p><b>기술 스택 : </b>Spring Boot (WebSoket), MySQL DB</p>
+                  <p><b>개발 기간 : </b>팀원들과 회의 후 기간을 정할 예정입니다.</p>
                   <p><b>담당 역할 :</b></p>
                   <ul class="role-list">
-                    <li>캠핑장 예약 기능 구현</li>
-                    <li>로그인 / 로그아웃 기능 구현</li>
-                    <li>일부 CSS 디자인</li>
+                    <li>로그인/로그아웃</li>
+                    <li>나머지는 회의 후 정할 예정입니다.</li>
                   </ul>
-                  <p><b>설명 : </b>사용자가 캠핑장을 예약할 수 있도록 만든 시스템입니다. 또한 게시글을 추가하여 사용자들이 게시글을 올릴 수 있도록 하였습니다.</p>
+                  <p><b>설명 : </b>회원들 사이에서 중고거래 및 채팅이 되도록 프로그램을 만들 예정입니다. 또한 관리자가 회원들을 관리할 수 있도록 관리자 모드를 넣어 회원들간의 불편함을 없애는 
+                                  프로그램을 만들 예정입니다.</p>
                   <p><b>개선점과 느낀점 : </b></p>
-                  <a href="http://13.124.134.115:8082/" target="_blank">프로젝트 링크 바로가기 >></a>
+                  <a href="" target="_blank">프로젝트 링크 바로가기 >></a>
                 </div> 
               </div>
             </div>
