--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div id="modal-pickme" class="modal">
               <div class="modal-content">
                 <span class="close" onclick="closeModal('pickme')">&times;</span>
-                <h2>Camping Reservation Project</h2>
+                <h2>PickMe Project</h2>
             
                 <div class="slider">
                   <button class="prev" onclick="prevImagePickMe()">&#10094;</button>
