--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             
                 <div class="modal-description">
                   <p><b>Title : </b> 캠핑장 예약 사이트</p>
-                  <p><b>기술 스택 : </b> Spring Boot, Oracle DB(DBeaver), JavaScript, Java</p>
+                  <p><b>기술 스택 : </b> Spring Boot, Oracle DB</p>
                   <p><b>개발 기간 : </b>2024년 07월 25일 ~ 2024년 08월 21일</p>
                   <p><b>담당 역할 :</b></p>
                   <ul class="role-list">
