--- a/index.html
+++ b/index.html
@@ -261,12 +261,12 @@
     <div id="modal-pickme" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
       <div class="bg-white rounded-lg max-w-xl w-full p-6 relative">
         <button class="absolute top-3 right-3 text-gray-500 hover:text-black" onclick="closeModal('pickme')">&times;</button>
-        <h2 class="text-2xl font-bold mb-4">PickMe 프로젝트</h2>
+        <h2 class="text-2xl font-bold mb-4">챗팅</h2>
         <ul class="text-sm text-gray-700 leading-relaxed space-y-2">
           <li><b>📅 개발 기간:</b> 예정</li>
           <li><b>🛠 사용 기술:</b> Spring Boot (WebSocket), MySQL</li>
           <li><b>🧑‍💻 담당 역할:</b> 로그인/로그아웃 구현 예정, 팀원과 역할 분담 예정</li>
-          <li><b>📌 설명:</b> 회원 간 중고거래 및 채팅 시스템 구현 예정. 관리자 기능도 포함될 예정.</li>
+          <li><b>📌 설명:</b> 채팅 시스템 구현 예정.</li>
           <li><b>💡 기대 효과:</b> 실시간 데이터 처리 및 사용자 관리 기능에 대한 경험 향상</li>
         </ul>
       </div>
