--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </div>
     <div>
       <h2 class="text-2xl font-bold mb-4">Education</h2>
-      <p class="text-sm">2020.03 ~ 2022.02 인천재능대학교 전자과</p>
-      <p class="text-sm">졸업 | 4.27 / 4.5</p>
+      <p class="text-sm">2020.03 ~ 2022.02 인천재능대학교 전자과 (졸업 | 4.27 / 4.5)</p>
+      <p class="text-sm">2024.04 ~ 진행 중 학점은행제 컴퓨터공학 학사 과정</p>
     </div>
   </section>
 
