--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
 
   <!-- Hero -->
   <section class="h-screen flex flex-col justify-center items-center text-center px-4">
-    <h1 class="text-4xl md:text-6xl font-extrabold mb-4">안녕하세요 <span class="text-black">김동규</span>입니다.</h1>
-    <p class="text-lg md:text-xl text-gray-600">하나를 알면 열을 아는 백엔드 개발자입니다.<br/>가독성과 안정성을 중요하게 생각합니다.</p>
-    <div class="mt-10 animate-bounce text-gray-400">▼</div>
+    <h1 class="text-4xl md:text-6xl font-extrabold mb-4">안녕하세요 <span class="text-black">김동규</span>입니다. (Test)</h1>
+    <p class="text-lg md:text-xl text-gray-600">끈기와 책임감을 가진 신입 개발자입니다.<br/></p>
+    <div id="toggleBtn" class="mt-10 animate-bounce text-gray-400 cursor-pointer text-2xl">▼</div>
+    <div id="intro" class="max-w-xl mt-6 text-gray-700 text-base leading-relaxed overflow-hidden transition-all duration-500 ease-in-out max-h-0">
+      <p>
+        저는 새로운 기술을 배우고 적용하는 것을 즐기며,  
+        문제를 해결하는 과정에서 끈기와 책임감을 발휘합니다.  
+        또한 팀원들과의 원활한 소통을 통해 함께 성장하는 개발자가 되고자 합니다.
+      </p>
+    </div>
   </section>
 
   <!-- Profile + Contact + Education -->
@@ -37,6 +44,7 @@
     <div>
       <h2 class="text-2xl font-bold mb-4">Education</h2>
       <p class="text-sm">2020.03 ~ 2022.02 인천재능대학교 전자과 (졸업 | 4.27 / 4.5)</p>
+      <p class="text-sm">졸업 | 4.27 / 4.5</p>
       <p class="text-sm">2024.04 ~ 진행 중 학점은행제 컴퓨터공학 학사 과정</p>
     </div>
   </section>
@@ -79,7 +87,7 @@
 
       <!-- Back-End -->
       <div class="bg-white rounded-xl shadow-md p-6 hover:-translate-y-1 transition transform">
-        <h3 class="text-xl font-bold mb-4 text-indigo-700 text-center">Back-End</h3>
+        <h3 class="text-xl font-bold  mb-4 text-indigo-700 text-center">Back-End</h3>
 
         <div class="mb-3">
           <p class="text-sm font-semibold mb-1">Spring <span class="float-right">35%</span></p>
@@ -261,11 +269,11 @@
     <div id="modal-pickme" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
       <div class="bg-white rounded-lg max-w-xl w-full p-6 relative">
         <button class="absolute top-3 right-3 text-gray-500 hover:text-black" onclick="closeModal('pickme')">&times;</button>
-        <h2 class="text-2xl font-bold mb-4">챗팅</h2>
+        <h2 class="text-2xl font-bold mb-4">챗팅 프로그램</h2>
         <ul class="text-sm text-gray-700 leading-relaxed space-y-2">
-          <li><b>📅 개발 기간:</b> 예정</li>
-          <li><b>🛠 사용 기술:</b> Spring Boot (WebSocket), MySQL</li>
-          <li><b>🧑‍💻 담당 역할:</b> 로그인/로그아웃 구현 예정, 팀원과 역할 분담 예정</li>
+          <li><b>📅 개발 기간:</b> 2025.09.01 ~ 2025.09.30</li>
+          <li><b>🛠 사용 기술:</b> Spring Boot, MySQL, MongoDB, Redis</li>
+          <li><b>🧑‍💻 담당 역할:</b> 로그인/로그아웃, 채팅기능</li>
           <li><b>📌 설명:</b> 채팅 시스템 구현 예정.</li>
           <li><b>💡 기대 효과:</b> 실시간 데이터 처리 및 사용자 관리 기능에 대한 경험 향상</li>
         </ul>
