--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
 
         <!-- chating -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:scale-105 transition-transform cursor-pointer" onclick="openModal('pickme')">
-          <img src="img/pickme.jpg" class="w-full h-40 object-cover" />
+          <img src="" class="w-full h-40 object-cover" />
           <div class="p-4">
-            <h3 class="text-xl font-semibold mb-2">PickMe</h3>
-            <p class="text-sm mb-2">💬 WebSocket, MySQL</p>
-            <p class="text-sm">실시간 채팅 + 중고거래 플랫폼</p>
+            <h3 class="text-xl font-semibold mb-2">Chating</h3>
+            <p class="text-sm mb-2">Spring Boot, 💬 WebSocket, MySQL, Redis</p>
+            <p class="text-sm">실시간 채팅</p>
           </div>
         </div>
       </div>
@@ -242,10 +242,11 @@
           <li><b>📅 개발 기간:</b> 2025.01.19 ~ 2025.02.16</li>
           <li><b>🛠 사용 기술:</b> Spring Boot, H2 DB, JPA, Naver Login, KG Inicis API</li>
           <li><b>🧑‍💻 담당 역할:</b> DB 설계, 결제 구현, 전체 코드 정리</li>
-          <li><b>📌 설명:</b> 관리자 로그인으로 쇼핑몰을 운영하고 상품/회원 관리 및 결제 내역을 확인할 수 있도록 구현함.</li>
+          <li><b>📌 설명:</b> (ID : admin@example.com / Password : password123) 관리자가 로그인을 하여 쇼핑몰과 회원을 관리할 수 있게 설계하였고 / 회원들은 로그인과 상품 구매 서비스를 이용할 수 있음.</li>
           <li><b>💡 느낀 점:</b> 결제 API 연동을 통해 실전 경험을 쌓았고, 협업 시 코드 품질 유지의 중요성을 체감함.</li>
         </ul>
         <a href="http://15.164.198.57:8081/" target="_blank" class="inline-block mt-4 text-blue-500 underline">👉 프로젝트 링크</a>
+        <a href="https://github.com/KIM-D-K/shopnovaProject">👉 프로젝트 계획</a>
       </div>
     </div>
 
@@ -262,16 +263,17 @@
           <li><b>💡 느낀 점:</b> 프로젝트를 통해 웹 시스템 흐름 이해도가 높아졌고, 실습을 통해 역량이 향상됨.</li>
         </ul>
         <a href="http://13.124.134.115:8082/" target="_blank" class="inline-block mt-4 text-blue-500 underline">👉 프로젝트 링크</a>
+        <a href="https://github.com/KIM-D-K/CampingProject">👉 프로젝트 계획</a>
       </div>
     </div>
 
     <!-- PickMe Modal -->
     <div id="modal-pickme" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
       <div class="bg-white rounded-lg max-w-xl w-full p-6 relative">
-        <button class="absolute top-3 right-3 text-gray-500 hover:text-black" onclick="closeModal('pickme')">&times;</button>
-        <h2 class="text-2xl font-bold mb-4">챗팅 프로그램</h2>
+        <button class="absolute top-3 right-3 text-gray-500 hover:text-black" onclick="closeModal('chatting')">&times;</button>
+        <h2 class="text-2xl font-bold mb-4">chatting 프로젝트</h2>
         <ul class="text-sm text-gray-700 leading-relaxed space-y-2">
-          <li><b>📅 개발 기간:</b> 2025.09.01 ~ 2025.09.30</li>
+          <li><b>📅 개발 기간:</b> 2025.09.05 ~ </li>
           <li><b>🛠 사용 기술:</b> Spring Boot, MySQL, MongoDB, Redis</li>
           <li><b>🧑‍💻 담당 역할:</b> 로그인/로그아웃, 채팅기능</li>
           <li><b>📌 설명:</b> 채팅 시스템 구현 예정.</li>
