--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Hero -->
   <section class="h-screen flex flex-col justify-center items-center text-center px-4">
-    <h1 class="text-4xl md:text-6xl font-extrabold mb-4">안녕하세요 <span class="text-black">김동규</span>입니다. (Test)</h1>
+    <h1 class="text-4xl md:text-6xl font-extrabold mb-4">안녕하세요 <span class="text-black">김동규</span>입니다.</h1>
     <p class="text-lg md:text-xl text-gray-600">끈기와 책임감을 가진 신입 개발자입니다.<br/></p>
     <div id="toggleBtn" class="mt-10 animate-bounce text-gray-400 cursor-pointer text-2xl">▼</div>
     <div id="intro" class="max-w-xl mt-6 text-gray-700 text-base leading-relaxed overflow-hidden transition-all duration-500 ease-in-out max-h-0">
@@ -43,9 +43,9 @@
     </div>
     <div>
       <h2 class="text-2xl font-bold mb-4">Education</h2>
-      <p class="text-sm">2020.03 ~ 2022.02 인천재능대학교 전자과 (졸업 | 4.27 / 4.5)</p>
+      <p class="text-sm">2020.03 ~ 2022.02 인천재능대학교 전자과</p>
       <p class="text-sm">졸업 | 4.27 / 4.5</p>
-      <p class="text-sm">2024.04 ~ 진행 중 학점은행제 컴퓨터공학 학사 과정</p>
+      <p class="text-sm">2025.07 ~ 진행 중 학점은행제 컴퓨터공학 학사 과정</p>
     </div>
   </section>
 
@@ -242,7 +242,7 @@
           <li><b>📅 개발 기간:</b> 2025.01.19 ~ 2025.02.16</li>
           <li><b>🛠 사용 기술:</b> Spring Boot, H2 DB, JPA, Naver Login, KG Inicis API</li>
           <li><b>🧑‍💻 담당 역할:</b> DB 설계, 결제 구현, 전체 코드 정리</li>
-          <li><b>📌 설명:</b> (ID : admin@example.com / Password : password123) 관리자가 로그인을 하여 쇼핑몰과 회원을 관리할 수 있게 설계하였고 / 회원들은 로그인과 상품 구매 서비스를 이용할 수 있음.</li>
+          <li><b>📌 설명:</b> (ID : admin@example.com / Password : password123) 관리자가 로그인을 하여 쇼핑몰과 회원을 관리할 수 있게 설계하였고 / 회원분들은 회원가입을 통해 로그인과 상품 구매가 가능하도록 설계하였습니다.</li>
           <li><b>💡 느낀 점:</b> 결제 API 연동을 통해 실전 경험을 쌓았고, 협업 시 코드 품질 유지의 중요성을 체감함.</li>
         </ul>
         <a href="http://15.164.198.57:8081/" target="_blank" class="inline-block mt-4 text-blue-500 underline">👉 프로젝트 링크</a>
@@ -263,7 +263,7 @@
           <li><b>💡 느낀 점:</b> 프로젝트를 통해 웹 시스템 흐름 이해도가 높아졌고, 실습을 통해 역량이 향상됨.</li>
         </ul>
         <a href="http://13.124.134.115:8082/" target="_blank" class="inline-block mt-4 text-blue-500 underline">👉 프로젝트 링크</a>
-        <a href="https://github.com/KIM-D-K/CampingProject">👉 프로젝트 계획</a>
+        <a href="https://github.com/KIM-D-K/CampingProject" target="_blank" class="inline-block mt-4 text-blue-500 underline">👉 프로젝트 계획</a>
       </div>
     </div>
 
@@ -273,7 +273,7 @@
         <button class="absolute top-3 right-3 text-gray-500 hover:text-black" onclick="closeModal('chatting')">&times;</button>
         <h2 class="text-2xl font-bold mb-4">chatting 프로젝트</h2>
         <ul class="text-sm text-gray-700 leading-relaxed space-y-2">
-          <li><b>📅 개발 기간:</b> 2025.09.05 ~ </li>
+          <li><b>📅 개발 기간:</b> 2025.09.10 ~ </li>
           <li><b>🛠 사용 기술:</b> Spring Boot, MySQL, MongoDB, Redis</li>
           <li><b>🧑‍💻 담당 역할:</b> 로그인/로그아웃, 채팅기능</li>
           <li><b>📌 설명:</b> 채팅 시스템 구현 예정.</li>
@@ -281,7 +281,6 @@
         </ul>
       </div>
     </div>
-  </section>
-<script src="js/portfolio.js"></script>
+  </section> 
 </body>
 </html>
