--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>김동규 | 백엔드 포트폴리오</title>
+  <script src="js/portfolio.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=SUIT:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
