--- a/index.html
+++ b/index.html
@@ -243,7 +243,11 @@
           <li><b>🛠 사용 기술:</b> Spring Boot, H2 DB, JPA, Naver Login, KG Inicis API</li>
           <li><b>🧑‍💻 담당 역할:</b> DB 설계, 결제 구현, 전체 코드 정리</li>
           <li><b>📌 설명:</b> (ID : admin@example.com / Password : password123) 관리자가 로그인을 하여 쇼핑몰과 회원을 관리할 수 있게 설계하였고 / 회원분들은 회원가입을 통해 로그인과 상품 구매가 가능하도록 설계하였습니다.</li>
-          <li><b>💡 느낀 점:</b> 결제 API 연동을 통해 실전 경험을 쌓았고, 협업 시 코드 품질 유지의 중요성을 체감함.</li>
+          <li><b>💡 느낀 점:</b> 전 프로젝트에 비해 결제 API를 추가하여 외부 API 연동 경험을 쌓을 수 있었고, 팀원들과 협업하면서 많은 실전 경험을 얻을 수 있었습니다.  
+          특히 제가 팀을 이끌면서 리더의 역할이 얼마나 중요한지 깊이 깨달을 수 있었습니다.  
+          프로젝트 진행 과정에서 역할 분담, 기능 정의서 작성, 전체 흐름도 설계 등 해야 할 일이 많았고, 촉박한 시간 속에서 리더는 더 많은 책임과 무게를 짊어져야 한다는 것도 배웠습니다.  
+          이번 경험을 바탕으로 다음 팀 프로젝트에서는 더욱 주도적으로 팀을 이끌어, 한층 완성도 높은 결과를 만들어내고 싶습니다.
+          </li>
         </ul>
         <a href="http://15.164.198.57:8081/" target="_blank" class="inline-block mt-4 text-blue-500 underline">👉 프로젝트 링크</a>
         <a href="https://github.com/KIM-D-K/shopnovaProject">👉 프로젝트 계획</a>
@@ -258,9 +262,9 @@
         <ul class="text-sm text-gray-700 leading-relaxed space-y-2">
           <li><b>📅 개발 기간:</b> 2024.07.25 ~ 2024.08.21</li>
           <li><b>🛠 사용 기술:</b> Spring Boot, Oracle DB</li>
-          <li><b>🧑‍💻 담당 역할:</b> 예약 기능 구현, 로그인 시스템, 일부 UI 작업</li>
-          <li><b>📌 설명:</b> 캠핑장을 예약할 수 있는 웹사이트 구현. 사용자 게시글 기능 포함.</li>
-          <li><b>💡 느낀 점:</b> 프로젝트를 통해 웹 시스템 흐름 이해도가 높아졌고, 실습을 통해 역량이 향상됨.</li>
+          <li><b>🧑‍💻 담당 역할:</b> 개인 프로젝트</li>
+          <li><b>📌 설명:</b> 회원가입을 통해 사용자가 캠핑장을 예약할 수 있는 웹사이트를 직접 설계하고 구현하였습니다. 단순히 예약 기능뿐만 아니라, 사용자가 게시글을 작성하고 공유할 수 있는 커뮤니티 기능도 추가하여 사용자 간 상호작용이 가능하도록 했습니다. 이를 통해 기본적인 회원 인증/인가 흐름부터 데이터베이스 설계, 예약 로직 처리, 게시판 CRUD 구현까지 전반적인 웹 서비스 개발 과정을 경험할 수 있었습니다.</li>
+          <li><b>💡 느낀 점:</b> 첫 프로젝트인 만큼 부족한 점도 많고 제한된 시간 안에서 완성해야 한다는 부담감도 있었지만, 그 과정에서 웹 애플리케이션이 어떻게 동작하는지 흐름을 몸소 체득할 수 있었습니다. 특히 데이터베이스와 서버 간의 연동, 클라이언트 요청 처리, 그리고 사용자 경험을 고려한 기능 구현의 중요성을 깨달았고, 이후 프로젝트를 진행할 때 기초를 단단히 다질 수 있는 기반이 되었습니다.</li>
         </ul>
         <a href="http://13.124.134.115:8082/" target="_blank" class="inline-block mt-4 text-blue-500 underline">👉 프로젝트 링크</a>
         <a href="https://github.com/KIM-D-K/CampingProject" target="_blank" class="inline-block mt-4 text-blue-500 underline">👉 프로젝트 계획</a>
@@ -277,7 +281,7 @@
           <li><b>🛠 사용 기술:</b> Spring Boot, MySQL, MongoDB, Redis</li>
           <li><b>🧑‍💻 담당 역할:</b> 로그인/로그아웃, 채팅기능</li>
           <li><b>📌 설명:</b> 채팅 시스템 구현 예정.</li>
-          <li><b>💡 기대 효과:</b> 실시간 데이터 처리 및 사용자 관리 기능에 대한 경험 향상</li>
+          <li><b>💡 기대 효과:</b> 실시간 양방향 통신 기술과 실시간 데이터 처리 과정을 직접 다뤄볼 수 있는 좋은 기회라고 생각합니다. 실시간 채팅 기능을 구현하면서 데이터를 주고받고 저장하는 전 과정을 경험하며, 시스템이 어떻게 동작하는지 깊이 이해할 수 있을 것으로 기대합니다.</li>
         </ul>
       </div>
     </div>
