--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
         </div>
 
         <!-- chating -->
-        <div class="bg-white shadow-md rounded-xl overflow-hidden hover:scale-105 transition-transform cursor-pointer" onclick="openModal('pickme')">
+        <div class="bg-white shadow-md rounded-xl overflow-hidden hover:scale-105 transition-transform cursor-pointer" onclick="openModal('chatting')">
           <img src="" class="w-full h-40 object-cover" />
           <div class="p-4">
-            <h3 class="text-xl font-semibold mb-2">Chating</h3>
+            <h3 class="text-xl font-semibold mb-2">Chatting</h3>
             <p class="text-sm mb-2">Spring Boot, 💬 WebSocket, MySQL, Redis</p>
             <p class="text-sm">실시간 채팅</p>
           </div>
@@ -271,7 +271,7 @@
       </div>
     </div>
 
-    <!-- PickMe Modal -->
+    <!-- Chatting Modal -->
     <div id="modal-pickme" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
       <div class="bg-white rounded-lg max-w-xl w-full p-6 relative">
         <button class="absolute top-3 right-3 text-gray-500 hover:text-black" onclick="closeModal('chatting')">&times;</button>
