--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     </div>
 
     <!-- Chatting Modal -->
-    <div id="modal-pickme" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
+    <div id="modal-chatting" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
       <div class="bg-white rounded-lg max-w-xl w-full p-6 relative">
         <button class="absolute top-3 right-3 text-gray-500 hover:text-black" onclick="closeModal('chatting')">&times;</button>
         <h2 class="text-2xl font-bold mb-4">chatting 프로젝트</h2>
